--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "yargs": "^11.0.0",
-    "chokidar": "^2.0.4"
+    "chokidar": "^2.0.4",
+    "csvtojson": "^2.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
