--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "csvtojson": "^2.0.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "todo": "node todo-app\\index.js list",
+    "watcher": "node file-watcher\\index.js .\\file-watcher\\Data\\"
   },
   "repository": {
     "type": "git",
